--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -5,7 +5,7 @@ name: Nightly Release
 on:
   schedule:
     # Runs at 00:00 UTC every day
-    - cron: '0 0 * * *'
+    - cron: '* * * * *'
 
 jobs:
   build_and_push_images:
