--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -2,11 +2,10 @@
 # SPDX-License-Identifier: Apache-2.0
 name: Nightly Release
 
-# Remove curly bracket if you want to set cron job
-on: {}
-  # schedule:
+on:
+   schedule:
     # Runs at 00:00 UTC every day
-   # - cron: '0 0 * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   build_and_push_images:
